rs/macros/tests/ui/gservice_fails_override_method_not_found.stderr
error[E0080]: evaluation panicked: Method `Bar` not found in base service
  --> tests/ui/gservice_fails_override_method_not_found.rs:21:1
   |
21 | #[service(extends = BaseService)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `inherited_service_meta::_` failed here
